--- a/src/style/UserManager.css
+++ b/src/style/UserManager.css
@@ -1,3 +1,26 @@
 .tremor-Badge-text {
     margin-bottom: 0;
 }
+Button svg {
+    margin: 0
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #202127; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
