--- a/src/style/UserManager.css
+++ b/src/style/UserManager.css
@@ -7,20 +7,25 @@ Button svg {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
-  }
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #202127; 
+}
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #202127; 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+.th-row > th {
+  color: #bbb;
+  font-weight: bold;
+}
