added auction history page
- need to work on auction history and remanding history

--- a/src/style/QARecords.css
+++ b/src/style/QARecords.css
@@ -29,3 +29,7 @@ button > .tremor-Button-text {
 .truncate {
     margin-bottom: 0;
 }
+
+#recordingPanel {
+    background-color: #282f3c !important;
+}
