worked on firebase login, fixed tooltip

--- a/src/style/QARecords.css
+++ b/src/style/QARecords.css
@@ -33,3 +33,7 @@ button > .tremor-Button-text {
 #recordingPanel {
     background-color: #282f3c !important;
 }
+
+div[role="tooltip"] {
+    background-color: #666 !important;
+}
